--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <section class="max-length">
 
       <div class="carousel">
+        <input class="carousel-input" type="radio" name="mammals" id="arsinoitherium">
+        <input class="carousel-input" type="radio" name="mammals" id="elasmotherium">
+        <input class="carousel-input" type="radio" name="mammals" id="glyptodon">
+        <input class="carousel-input" type="radio" name="mammals" id="megatherium">
 
         <div class="carousel-innter relative">
           <div class="carousel-iems">
