--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
             </div>
           </div>
 
+          <ul class="carousel-control">
+            <li>
+              <label class="carousel-btn" for="arsinoitherium-control">Arsinoitherium</label>
+            </li>
+            <li>
+              <label class="carousel-btn" for="elasmotherium-control">Elasmotherium</label>
+            </li>
+            <li>
+              <label class="carousel-btn" for="glyptodon-control">Glyptodon</label>
+            </li>
+            <li>
+              <label class="carousel-btn" for="megatherium-control">Megatherium</label>
+            </li>
+
         </div>
 
       </div>
